syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.section01_01.models";

message BankUserInfo{
  string bank_name = 1;
  int32 branch_code = 2;
  string account_number = 3;
}

message BankRequest{
  bytes request = 1;
}

message BankResponse{
  int32 balance = 1;
}

service BankService{
  rpc GetBalance(BankRequest) returns(BankResponse);
}


